--- a/src/app/card/component/card.component.css
+++ b/src/app/card/component/card.component.css
@@ -1,3 +1,17 @@
+.header-container {
+  width: 100%;
+  height: 80px;
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+img {
+  max-height: 80px;
+  object-fit: scale-down;
+}
+
 mat-spinner {
   display: block;
   margin: auto;
