--- a/src/app/card/component/card.component.html
+++ b/src/app/card/component/card.component.html
@@ -1,3 +1,5 @@
+<div class="header-container"><img class="logo" src="https://media.wizards.com/2017/images/daily/41mztsnrdm.jpg" alt="logo"></div>
+
 <h4>
   <a [routerLink]="['/']">Return to search</a>
 </h4>
