--- a/src/app/card/component/card.component.html
+++ b/src/app/card/component/card.component.html
@@ -7,15 +7,15 @@
 </div>
 
 <ng-container *ngIf="card">
-  <img *ngIf="card.imageUrl" [src]="card.imageUrl">
-  <h2>{{ card.name }}</h2>
-  <div class="p"><b>Mana Cost: </b><div id="manaCost">{{ card.manaCost | manaCostIcons }}</div></div>
-  <div class="p"><b>Converted Mana Cost: </b>{{ card.cmc }}</div>
-  <div class="p"><b>Types: </b>{{ card.type }}</div>
-  <div class="p"><b>Card Text: </b><div id="text">{{ card.text | textIcons }}</div></div>
+  <img [src]="card.imageUrl">
+  <h2 *ngIf="card.name">{{ card.name }}</h2>
+  <div class="p" *ngIf="card.manaCost"><b>Mana Cost: </b><div id="manaCost">{{ card.manaCost | manaCostIcons }}</div></div>
+  <div class="p" *ngIf="card.cmc"><b>Converted Mana Cost: </b>{{ card.cmc }}</div>
+  <div class="p" *ngIf="card.type"><b>Types: </b>{{ card.type }}</div>
+  <div class="p" *ngIf="card.text"><b>Card Text: </b><div id="text">{{ card.text | textIcons }}</div></div>
   <div class="p" *ngIf="card.flavor"><b>Flavor Text: </b><i>{{ card.flavor }}</i></div>
   <div class="p" *ngIf="card.power && card.toughness"><b>P/T: </b>{{ card.power }}/{{ card.toughness }}</div>
-  <div class="p"><b>Set Name: </b>{{ card.setName }}</div>
-  <div class="p"><b>Rarity: </b>{{ card.rarity }}</div>
-  <div class="p"><b>Artist: </b>{{ card.artist }}</div>
+  <div class="p" *ngIf="card.setName"><b>Set Name: </b>{{ card.setName }}</div>
+  <div class="p" *ngIf="card.rarity"><b>Rarity: </b>{{ card.rarity }}</div>
+  <div class="p" *ngIf="card.artist"><b>Artist: </b>{{ card.artist }}</div>
 </ng-container>
