--- a/src/app/card/component/card.component.css
+++ b/src/app/card/component/card.component.css
@@ -1,17 +1,3 @@
-.header-container {
-  width: 100%;
-  height: 80px;
-  background-color: black;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.logo {
-  max-height: 80px;
-  object-fit: scale-down;
-}
-
 mat-spinner {
   display: block;
   margin: auto;
@@ -32,4 +18,11 @@ img, h2, .p {
 
 h4 {
   margin-left: 10px;
+}
+
+#text {
+  display: block;
+  margin: auto;
+  max-width: 400px;
+  text-align: center;
 }
