--- a/src/app/search/component/search.component.html
+++ b/src/app/search/component/search.component.html
@@ -10,12 +10,6 @@
   <mat-spinner></mat-spinner>
 </div>
 
-<!-- <mat-list>
-  <mat-list-item *ngFor="let result of filteredResults">
-    <a *ngIf="result.imageUrl" [routerLink]="['/card', result.multiverseid]" (click)="stateService.setCard(result)"><img src="{{ result.imageUrl }}" alt="{{ result.name }}"></a>
-  </mat-list-item>
-</mat-list> -->
-
 <div class="cardList">
   <ng-container *ngFor="let result of filteredResults">
     <mat-card class="example-card">
@@ -26,10 +20,10 @@
         </mat-card-header>
         <a *ngIf="result.imageUrl" [routerLink]="['/card', result.multiverseid]" (click)="stateService.setCard(result)"><img mat-card-image [src]="result.imageUrl" alt="result.name"></a>
       <mat-card-content>
-        <div class="p"><b>{{ result.name }} <div class="manaCost" id="{{ result.id }}">{{ result.manaCost | manaCostIcons: result.id.toString() }}</div></b></div>
-        <div class="p"><b>{{ result.type }}</b></div>
-        <div class="p"><div class="text" id="{{ result.imageUrl }}">{{ result.text | textIcons: result.imageUrl.toString() }}</div></div>
-        <div class="p"><i>{{ result.flavor }}</i></div>
+        <div class="p" *ngIf="result.name"><b>{{ result.name }} <div class="manaCost" id="{{ result.id }}" *ngIf="result.manaCost">{{ result.manaCost | manaCostIcons: result.id.toString() }}</div></b></div>
+        <div class="p" *ngIf="result.type"><b>{{ result.type }}</b></div>
+        <div class="p"><div class="text" id="{{ result.imageUrl }}" *ngIf="result.text">{{ result.text | textIcons: result.imageUrl.toString() }}</div></div>
+        <div class="p" *ngIf="result.flavor"><i>{{ result.flavor }}</i></div>
       </mat-card-content>
     </mat-card>
   </ng-container>
